--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,7 @@ import Calculator from '../components/Calculator.astro';
     <meta name="keywords" content="calorie counter, calculate calories, calories per gram, calories per 100g, metric calculator, nutrition" />
     <meta name="generator" content={Astro.generator} />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <link rel="canonical" href="https://www.metriccaloriecounter.com/" />
+    <link rel="canonical" href="https://metriccaloriecounter.netlify.app" />
     <style>
         html,
         body {
